# meta-tools

./: .env.example  .gitignore  README.md  plan.txt  pyproject.toml
examples/: develop_smoke_test.py  smoke_test.py
meta_tools/: analyzer.py  cli.py  config.py  developer.py  prompt_templates.py  schemas.py  server.py  suggester.py
papers/: related_work.md
tests/fixtures/: negative_one_off.json  negative_routine_bash.json  positive_fastapi_routes.json  sample_spec.json
