[project]
name = "meta-tools"
version = "0.1.0"
description = "MCP server that analyzes reasoning trajectories to detect missing tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meta_tools"]
